Added ProjectName to Artifact Feed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
     command: 'restore'
     restoreSolution: '**/*.sln'
     feedsToUse: 'select'
-    vstsFeed: 'Tailspin.SpaceGame.Web.ModelsNEW'
+    vstsFeed: 'Space Game - web - Dependencies/Tailspin.SpaceGame.Web.ModelsNEW'
 
 - task: DotNetCoreCLI@2
   displayName: 'Build the project - $(buildConfiguration)'
